--- a/debian/rules
+++ b/debian/rules
@@ -35,7 +35,7 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	cp -r etc/ usr/ $(DESTDIR)
+	cp -r etc/ lib/ usr/ $(DESTDIR)
 
 # Build architecture-independent files here.
 binary-indep: build install
