--- a/debian/live-auto-upgrades.service
+++ b/debian/live-auto-upgrades.service
@@ -1,8 +1,10 @@
 [Unit]
 Description=disables auto upgrades if no persistent media is found
+Before=packagekit.service
 
 [Service]
+Type=oneshot
 ExecStart=/usr/bin/live-auto-upgrades
 
 [Install]
-WantedBy=default.target
+WantedBy=packagekit.service
