--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: extra
 Maintainer: Lernstick Team <lernstick.ph@fhnw.ch>
 Uploaders: Ronny Standtke <ronny.standtke@fhnw.ch>, Gaudenz Steinlin <gaudenz.steinlin@cirrax.com>
-Build-Depends: debhelper (>= 9), config-package-dev
+Build-Depends: debhelper (>= 9), dh-systemd, config-package-dev
 Standards-Version: 3.7.3
 
 Package: lernstick-menu-xdg2-exam
