--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh ${@} --with=config-package
-	dh_systemd_enable --name=live-auto-upgrades live-auto-upgrades.service
+	dh ${@} --with=config-package,systemd
+
+override_dh_systemd_enable:
+	dh_systemd_enable --name=live-auto-upgrades
