--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.7.3
 
 Package: lernstick-menu-xdg2-exam
 Architecture: all
-Depends: ${misc:Depends}, menu-xdg, kde-runtime | libgtk-3-bin, gettext, xterm, xdotool, imagemagick, systemd, kde-baseapps-bin, zenity, nuvola-icon-theme
+Depends: ${misc:Depends}, menu-xdg, kde-runtime | libgtk-3-bin, gettext, xterm, xdotool, imagemagick, systemd, kde-baseapps-bin, zenity, nuvola-icon-theme, rdiff-backup
 Provides: ${diverted-files}
 Conflicts: lernstick-menu-xdg-exam, ${diverted-files}
 Breaks: lernstick-menu-xdg-exam
