--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-build-stamp                                                                                                                                                                                                                                                            
-configure-stamp                                                                                                                                                                                                                                                        
+build-stamp
+configure-stamp
+debian/.debhelper/
 debian/debhelper-build-stamp
 debian/files
-debian/lernstick-menu-xdg2/
-debian/lernstick-menu-xdg2.debhelper.log
-debian/lernstick-menu-xdg2.postinst.debhelper
-debian/lernstick-menu-xdg2.postrm.debhelper
-debian/lernstick-menu-xdg2.prerm.debhelper
-debian/lernstick-menu-xdg2.substvars
+debian/lernstick-menu-xdg/
+debian/lernstick-menu-xdg.debhelper.log
+debian/lernstick-menu-xdg.postinst.debhelper
+debian/lernstick-menu-xdg.postrm.debhelper
+debian/lernstick-menu-xdg.prerm.debhelper
+debian/lernstick-menu-xdg.substvars
