--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Ronny Standtke <ronny.standtke@fhnw.ch>, Gaudenz Steinlin <gaudenz.st
 Build-Depends: debhelper (>= 10), config-package-dev
 Standards-Version: 3.7.3
 
-Package: lernstick-menu-xdg2-exam
+Package: lernstick-menu-xdg-exam
 Architecture: all
 Depends: ${misc:Depends}, menu-xdg, kde-runtime | libgtk-3-bin, gettext, xterm, xdotool, imagemagick, systemd, kde-baseapps-bin, zenity, nuvola-icon-theme, rdiff-backup, wmctrl
 Provides: ${diverted-files}
